--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -8,7 +8,7 @@ rtl = false
 title = "JoshuaFlores.rocks"
 logo = "img/logo.png"
 description = "Portfolio for Joshua Flores"
-copyright = "Copy, _right?_ :thinking_face:"
+# copyright = ""
 
 dateFormat = "January 1 2006"
 
