--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -18,7 +18,7 @@ dateFormat = "January 1 2006"
   headline = "User Experience Designer and Web Developer"
   bio = "User Experience Designer and Web Developer"
   links = [
-     { email = "mailto:hello@your_domain.com" },
+     { email = "joshuapflores.design@gmail.com" },
      { github = "https://github.com/joshua-flores" },
      { linkedin = "https://www.linkedin.com/in/joshua-flores-18b90516b/" },
      { youtube = "https://www.youtube.com/@joshlearnspiano2928" },
