--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -6,8 +6,8 @@
 # https://blowfish.page/docs/configuration/#theme-parameters
 
 colorScheme = "blowfish"
-defaultAppearance = "light" # valid options: light or dark
-autoSwitchAppearance = true
+defaultAppearance = "dark" # valid options: light or dark
+autoSwitchAppearance = false
 
 enableSearch = false
 enableCodeCopy = false
@@ -38,7 +38,7 @@ disableImageOptimization = false
   homepageImage = "img/background.jpg" # used in: hero, and card
   showRecent = true
   showRecentItems = 6
-  showMoreLink = false
+  showMoreLink = true
   showMoreLinkDest = "/projects"
   cardView = true
   cardViewScreenWidth = false
